public-subnet.tf
# Create Public Subnet 1 in the VPC
resource "aws_subnet" "public_subnet_1" {
  vpc_id                  = aws_vpc.aws_capstone_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = var.aws_availability_zone_a
  map_public_ip_on_launch = true
  tags = {
    Name = "PublicSubnet1"
  }
}

# Create Public Subnet 2 in the VPC
resource "aws_subnet" "public_subnet_2" {
  vpc_id                  = aws_vpc.aws_capstone_vpc.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = var.aws_availability_zone_b
  map_public_ip_on_launch = true
  tags = {
    Name = "PublicSubnet2"
  }
}
